- fix local install on systems without usb

Version 17.93 - 19 January 2018

- sync with kernel 4.14
- include more input HWDB entries
- diskdrake:
  o ensure device major/minor numbers are reread after writing the
    partition table (mga#22032)
  o ensure soft links in /dev/disk/by-uuid are updated so that valid
    UUIDs are embedded in the initrd (mga#22059)

Version 17.92 - 4 January 2018

- fix perl escaping causing commands to not get linked

Version 17.91 - 4 October 2017

- do not include some hwdb files from uneeded pkgs

Version 17.90 - 18 September 2017

- bootloader:
  o better read back config
  o fix undefined labels when eg: Xen is installed (mga#19014)
    crash with "undefined value for mandatory argument 'text''

Version 17.89 - 7 September 2017

- include part of udev's hwdb (mga#20327)
- adapt to perl-5.26
- adapt to URPM-5.14 (using perl native ints)

Version 17.88 - 7 July 2017

- translation updates

Version 17.87 - 25 June 2017

- left background image for Mageia 6 final

Version 17.86 - 23 June 2017

- increase the default window size of the installer to 1024x768 (mga#20624)

Version 17.85 - 22 June 2017

- don't overwrite custom grub2 settings when upgrading (mga#20596)
- recognize 8812au (mga#21043)

Version 17.84 - 5 June 2017

- translation updates

Version 17.83 - 4 June 2017

- log output of libinput-list-devices in report.bug (mga#20327)
- translation updates

Version 17.82 - 6 May 2017

- add "please wait" message when running update-grub2

Version 17.81 - 5 May 2017

- fix missing "Configure Supplemental Installation Media" screen (mga#20484)

Version 17.80 - 3 May 2017

- updated DE selection and advertising artwork for Mageia 6

Version 17.79 - 26 April 2017

- updated translation snapshot

Version 17.78 - 4 April 2017

- new left background for Mageia 6 rc

Version 17.77 - 4 April 2017

- partitioning:
  o don't require a BIOS boot partition when performing an upgrade (mga#20338)