@@ -1,3 +1,7 @@
+- debug mode:
+  o adjust for python-3.6
+  o include chroot & partprobe too
+- fix including libinput tool
 - fix local install on systems without usb
 
 Version 17.93 - 19 January 2018
